tests/ui/traits/impl-bounds-checking.stderr
error[E0277]: the trait bound `isize: Clone2` is not satisfied
  --> $DIR/impl-bounds-checking.rs:10:24
   |
LL | impl Getter<isize> for isize {
   |                        ^^^^^ the trait `Clone2` is not implemented for `isize`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/impl-bounds-checking.rs:1:1
   |
LL | pub trait Clone2 {
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `Getter`
  --> $DIR/impl-bounds-checking.rs:6:17
   |
LL | trait Getter<T: Clone2> {
   |                 ^^^^^^ required by this bound in `Getter`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
